<resources>
    <string name="app_name">Cloud Declutter</string>
    <string name="app_title_login">Cloud \nDeclutter</string>
    <string name="wird_gescannt">%s wird gescannt.</string>
    <string name="file_progress">Datei %d von %d</string>
    <string name="time_remaining">Noch %d Sekunden verbleibend.</string>
    <string name="files_deleted">Du hast heute %d Dateien mit einer Gesamtgröße von %.2f %s gelöscht.</string>
    <string name="see_recycle_bin">Die gelöschten Dateien können innerhalb der nächsten <b>30</b> Tage aus dem <b>Papierkorb</b> wiederhergestellt werden.</string>
    <string name="select_all">Alle auswählen</string>
    <string name="select_file_types">Dateitypen auswählen</string>
    <string name="clear_all">Alle löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">Ok</string>
    <string name="delete_confirm"><font color="#FF0000">Löschen</font></string>
    <string name="scan_starten">Scan starten</string>
    <string name="scan_running">Scan läuft…</string>
    <string name="pause">Pausieren</string>
    <string name="resume">Fortsetzen</string>
    <string name="clouds">Clouds</string>
    <string name="dateigroesse">Dateigröße</string>
    <string name="von">von</string>
    <string name="bis">bis</string>
    <string name="dateityp">Dateityp</string>
    <string name="dateiname_enthaelt">Dateiname enthält</string>
    <string name="hint_comma_separated">Begriffe mit Beistrichen trennen</string>
    <string name="zeitraum_erstelldatum">Erstelldatum (Zeitraum)</string>
    <string name="zeitraum_waehlen">Zeitraum wählen</string>
    <string name="dropbox">Dropbox</string>
    <string name="onedrive">OneDrive</string>
    <string name="error_no_cloud">Mindestens eine Cloud muss ausgewählt sein</string>
    <string-array name="size_units">
        <item>B</item>
        <item>kB</item>
        <item>MB</item>
        <item>GB</item>
    </string-array>
    <string-array name="file_types">
        <item>Bilder</item>
        <item>Videos</item>
        <item>Dokumente</item>
        <item>Audio</item>
        <item>Archive</item>
        <item>Sonstige</item>
    </string-array>
    <string name="invalidEmailWarning">Die eingegebene E-Mail-Adresse ist nicht gültig.</string>
    <string name="loginEmailHint">E-Mail</string>
    <string name="loginPasswordHint">Passwort</string>
    <string name="loginConfirmPasswordHint">Passwort bestätigen</string>
    <string name="loginSubmitLogin">Anmelden</string>
    <string name="loginSubmitSignup">Registrieren</string>
    <string name="loginNoAccount">Du hast noch keinen Account?\n%s</string>
    <string name="loginNoAccountLink">Jetzt Registrieren</string>
    <string name="loginYesAccount">Du hast bereits einen Account? %s</string>
    <string name="loginYesAccountLink">Anmelden</string>
    <string name="loginPwdNoMatch"><font color="#FF0000">&#x2718; Passwörter stimmen nicht überein</font></string>
    <string name="loginPwdYesMatch"><font color="#008000">&#x2714; Passwörter stimmen überein</font></string>
    <string name="loginFpwdDescription1">Gib die E-Mail deines Accounts ein</string>
    <string name="loginFpwdSendMail">Bestätigen</string>
    <string name="loginFpwdGoBack">Zurück zu Login</string>
    <string name="loginFpwdDescription2">Ein Link zum Zurücksetzen wurde an deine E-Mail gesendet.</string>
    <string name="loginForgotPassword">Passwort vergessen? %s</string>
    <string name="loginForgotPasswordLink">Passwort zurücksetzen</string>
    <string name="loginWrongLoginData">Falsche E-Mail oder Passwort. Versuche es erneut.</string>
    <string name="loginEmailNoMatch">&#x2718; Keine gültige E-Mail Adresse</string>
    <string name="loginEmailAlreadyExists">E-Mail Adresse existiert bereits, wähle eine andere.</string>
    <string name="buttonAddACloud">Füge eine Cloud hinzu</string>
    <string name="accChangeEmail">E-Mail ändern</string>
    <string name="accChangePassword">Passwort ändern</string>
    <string name="accOldPwd">Altes Passwort</string>
    <string name="accNewPwd">Neues Passwort</string>
    <string name="accConfirmNewPwd">Neues Passwort bestätigen</string>
    <string name="accChangedPwd">Passwort geändert</string>
    <string name="accWrongOldPassword">Altes Passwort ist nicht korrekt.</string>
    <string name="accWrongPassword">&#x2718; Passwort ist nicht korrekt.</string>
    <string name="accRmAccInfo">Damit dein Account gelöscht wird musst du dein Passwort bestätigen.\nEine Bestätigung zur Löschung deines Accounts wird an deine E-Mail gesendet. Du hast <b>14 Tage</b> Zeit um deinen Account wiederherzustellen.</string>
    <string name="accLogout">Logout</string>
    <string name="accLogoutMsg">Möchtest du dich wirklich ausloggen?</string>
    <string name="accLogoutConfirm"><font color="#FF0000">Logout</font></string>
    <string name="accDeleteAccount">Account Löschen</string>
    <string name="accDeleteAccountConfirm"><font color="#FF0000">Account Löschen</font></string>
    <string name="accDeleteAccountMsg">Möchtest du wirklich deinen Account löschen?\n<b>Diese Aktion kann nicht rückgängig gemacht werden!</b></string>
    <string name="accEditEmail">E-Mail ändern</string>
    <string name="accSaveEmail">Speichern</string>
    <string name="status_bad"><font color="#FF0000">Nicht Funktionsbereit!</font></string>
    <string name="nav_main">Hauptseite</string>
    <string name="nav_cloud">Cloud Dienste</string>
    <string name="nav_usage">Speichernutzung</string>
    <string name="nav_cleanup">Schneller Scan</string>
    <string name="nav_trash">Papierkorb</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_faq">Hilfe / FAQ</string>
    <string name="faqContact">Kontaktformular</string>
    <string name="faqName">Name(Optional)</string>
    <string name="faqEmail">E-Mail</string>
    <string name="faqSubject">Thema</string>
    <string name="faqText">Nachricht</string>
    <string name="faqSend">Senden</string>
    <string name="faqSendConfigmMsg">Deine Nachricht wurde versendet!</string>
    <string name="status_label">Status:</string>
    <string name="status_ok"><font color="#008000">Funktionsbereit!</font></string>
    <string name="trash_title">Papierkorb</string>
    <string name="trash_info_14_days">Hinweis: Dateien werden nach der angegebenen Anzahl an Tagen automatisch gelöscht.</string>
    <string name="btn_empty_trash">Papierkorb leeren</string>
    <string name="btn_restore">Wiederherstellen</string>
    <string name="btn_delete">Löschen</string>
    <string name="btn_select_all">Alles auswählen</string>
    <string name="btn_deselect_all">Auswahl aufheben</string>
    <string name="msg_no_files_selected">Keine Dateien ausgewählt</string>
    <string name="msg_restored">Dateien wiederhergestellt</string>
    <string name="msg_deleted_forever">Dateien endgültig gelöscht</string>
    <string name="trash_empty_confirm_msg">Möchten Sie die ausgewählten Dateien endgültig aus dem Papierkorb löschen?\nAchtung: Die gelöschten Dateien können nicht(!) wiederhergestellt werden.</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="account_label">Konto: %1$s</string>
    <string name="msg_no_files_found">Keine Dateien gefunden.</string>
    <string name="cloud_remove_confirm"><font color="#FF0000">Entfernen</font></string>
    <string name="usage_title">Speichernutzung</string>
    <string name="storage_internal">Gerätespeicher</string>
    <string name="storage_total">64 GB Gesamtkapazität</string>
    <string name="storage_used">Belegt: 48 GB (75%)</string>
    <string name="type_images">Bilder: 20 GB (31%)</string>
    <string name="type_videos">Videos: 15 GB (23%)</string>
    <string name="type_apps">Apps: 10 GB (16%)</string>
    <string name="type_other">Sonstiges: 3 GB (5%)</string>
    <string name="usage_total_capacity">Gesamtkapazität: %1$s</string>
    <string name="usage_used_capacity">Belegt: %1$s (%2$d%%)</string>
    <string name="usage_type_breakdown">%1$s: %2$s (%3$d%%)</string>
    <string name="btn_add_cloud">Cloud-Dienst hinzufügen</string>
    <string name="cloud_title">Cloud Dienste</string>
    <string name="status_connected">Status: <font color="#008000">Verbunden</font></string>
    <string name="status_not_connected">Status: <font color="#FF0000">Keine Verbindung</font></string>
    <string name="active_for_scans">Aktiv:</string>
    <string name="btn_connect">Verbinden</string>
    <string name="btn_disconnect">Trennen</string>
    <string name="dropbox_login_title">Dropbox Login</string>
    <string name="google_login_title">Google Drive Login</string>
    <string name="onedrive_login_title">OneDrive Login</string>
    <string name="icloud_login_title">iCloud Login</string>
    <string name="login_header">Anmelden</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Passwort</string>
    <string name="btn_login">Einloggen</string>
    <string name="msg_dropbox_success">Erfolgreich mit Dropbox verbunden</string>
    <string name="msg_google_success">Erfolgreich mit Google Drive verbunden</string>
    <string name="msg_onedrive_success">Erfolgreich mit OneDrive verbunden</string>
    <string name="msg_icloud_success">Erfolgreich mit iCloud verbunden</string>
    <string name="cleanup_title">Speicherbereinigung</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_sort">Sortieren</string>
    <string name="msg_confirm_move_to_trash">Möchten Sie %1$d Elemente in den Papierkorb verschieben?</string>
    <string name="btn_yes">Ja</string>
    <string name="msg_moved_to_trash">Elemente in den Papierkorb verschoben</string>
    <string name="filter_name_label">Dateiname beinhaltet:</string>
    <string name="filter_name_hint">z.B. Foto</string>
    <string name="filter_type_label">Dateityp:</string>
    <string name="filter_min_size_label">Min. Größe (MB):</string>
    <string name="filter_max_size_label">Max. Größe (MB):</string>
    <string name="filter_title">Filter einstellen</string>
    <string name="btn_apply">Anwenden</string>
    <string name="msg_invalid_size">Ungültige Größe</string>
    <string name="btn_reset">Zurücksetzen</string>
    <string name="reset_filter">Filter zurücksetzen</string>
    <string name="to_blacklist"><u>(zur Blacklist)</u></string>
    <string name="info_category_title">Information</string>
    <string name="info_category_text">Die hier gesetzten Filter können während der Speicherbereinigung noch angepasst werden.</string>
    <string name="sort_name_az">Name (A-Z)</string>
    <string name="sort_name_za">Name (Z-A)</string>
    <string name="sort_size_desc">Größe (Groß zuerst)</string>
    <string name="sort_size_asc">Größe (Klein zuerst)</string>
    <string name="sort_date_desc">Datum (Neu zuerst)</string>
    <string name="sort_date_asc">Datum (Alt zuerst)</string>
    <string name="sort_title">Sortieren nach</string>
    <string name="msg_no_files_cleanup_hint">Keine Dateien zum Bereinigen gefunden (Prüfen Sie Ihre Cloud-Einstellungen).</string>
    <string name="nav_expanded_scan">Erweiterter Scan</string>
    <string name="btn_done">Zum Endbericht</string>
    <string name="btn_next">Weiter</string>
    <string name="btn_main_scan">Erweiterter Scan</string>
    <string name="status_not_available"><font color="#FF0000">Nicht verfügbar</font></string>
    <string name="btn_scan_settings">Scan Einstellungen</string>
    <string name="btn_cloud_dienste">Cloud Dienste Einstellungen</string>
    <string name="btn_account_settings">Account Einstellungen</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_blacklist_btn">Blacklist (Filter: %d)</string>
    <string name="settings_automatic_scan">Automatischer Scan bei App-Start</string>
    <string name="settings_periodic_scan">Periodischer Scan</string>
</resources>