<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/nav_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accChangeEmail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAccEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <TextView
            android:id="@+id/txAccEmailMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/loginEmailNoMatch"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btEditConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/accEditEmail" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accChangePassword" />

        <EditText
            android:id="@+id/etAccOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/accOldPwd"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accNewPwd" />

        <EditText
            android:id="@+id/etAccNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/accNewPwd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etAccNewPwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/accConfirmNewPwd"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txPwMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="TextView"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btAccChangePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accChangePassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/btAccLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/accLogout" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/btAccDelAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/accDeleteAccount" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.navigation.NavigationView
android:id="@+id/nav_view"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="start"
app:itemTextAppearanceActive="@style/NavMenuItemStyle"
app:itemTextAppearanceInactive="@style/NavMenuItemStyle"
app:itemVerticalPadding="12dp"
app:menu="@menu/drawer_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>