<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/settings_title"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_automatic_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_automatic_scan"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_periodic_scan"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_periodic_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/btn_blacklist"
            style="@style/BigButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_blacklist_btn"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_scan_settings"
            style="@style/BigButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan_settings"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_account_settings"
            style="@style/BigButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_account_settings"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:id="@+id/btn_cloud_dienste"
            style="@style/BigButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cloud_dienste"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.navigation.NavigationView
android:id="@+id/nav_view"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="start"
app:itemTextAppearanceActive="@style/NavMenuItemStyle"
app:itemTextAppearanceInactive="@style/NavMenuItemStyle"
app:itemVerticalPadding="12dp"
app:menu="@menu/drawer_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>
