<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/faqContact"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="-16dp">

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_border"
            android:ems="10"
            android:hint="@string/faqName"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_border"
            android:ems="10"
            android:hint="@string/faqEmail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_border"
            android:ems="10"
            android:hint="@string/faqSubject"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_border"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/faqText"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:minHeight="64pt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/btFaqContactSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faqSend" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>